--- a/Common/TeleConsult.Common/TeleConsult.Common.csproj
+++ b/Common/TeleConsult.Common/TeleConsult.Common.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="GlobalConstants.cs" />
     <Compile Include="Helpers\EnumerableExtensions.cs" />
+    <Compile Include="Helpers\ExtensionMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
