--- a/Data/TeleConsult.Data/TeleConsult.Data.csproj
+++ b/Data/TeleConsult.Data/TeleConsult.Data.csproj
@@ -103,6 +103,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Filters\Admin\AdminFilter.cs" />
+    <Compile Include="Filters\Admin\LogFilter.cs" />
     <Compile Include="Filters\Admin\SpecialistFilter.cs" />
     <Compile Include="Filters\PagingFilter.cs" />
     <Compile Include="Helpers\Sort.cs" />
@@ -110,15 +111,19 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proxies\HospitalProxy.cs" />
+    <Compile Include="Proxies\LogProxy.cs" />
     <Compile Include="Proxies\SpecialistProxy.cs" />
     <Compile Include="Proxies\SpecialityProxy.cs" />
+    <Compile Include="Proxies\UserProxy.cs" />
     <Compile Include="RepoFactory\IRepoFactory.cs" />
     <Compile Include="RepoFactory\RepoFactory.cs" />
     <Compile Include="Repositories\BaseRepository.cs" />
     <Compile Include="Repositories\HospitalRepository.cs" />
     <Compile Include="Repositories\IRepository.cs" />
+    <Compile Include="Repositories\LogRepository.cs" />
     <Compile Include="Repositories\SpecialistRepository.cs" />
     <Compile Include="Repositories\SpecialityRepository.cs" />
+    <Compile Include="Repositories\UserRepository.cs" />
     <Compile Include="TeleConsultDbContext.cs" />
   </ItemGroup>
   <ItemGroup>
