--- a/Data/TeleConsult.Data/TeleConsult.Data.csproj
+++ b/Data/TeleConsult.Data/TeleConsult.Data.csproj
@@ -104,6 +104,7 @@
   <ItemGroup>
     <Compile Include="Filters\Admin\AdminFilter.cs" />
     <Compile Include="Filters\Admin\LogFilter.cs" />
+    <Compile Include="Filters\Admin\SchedulesFilter.cs" />
     <Compile Include="Filters\Admin\SpecialistFilter.cs" />
     <Compile Include="Filters\PagingFilter.cs" />
     <Compile Include="Helpers\Sort.cs" />
@@ -112,6 +113,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proxies\HospitalProxy.cs" />
     <Compile Include="Proxies\LogProxy.cs" />
+    <Compile Include="Proxies\ScheduleProxy.cs" />
     <Compile Include="Proxies\SpecialistProxy.cs" />
     <Compile Include="Proxies\SpecialityProxy.cs" />
     <Compile Include="Proxies\UserProxy.cs" />
@@ -121,6 +123,7 @@
     <Compile Include="Repositories\HospitalRepository.cs" />
     <Compile Include="Repositories\IRepository.cs" />
     <Compile Include="Repositories\LogRepository.cs" />
+    <Compile Include="Repositories\ScheduleRepository.cs" />
     <Compile Include="Repositories\SpecialistRepository.cs" />
     <Compile Include="Repositories\SpecialityRepository.cs" />
     <Compile Include="Repositories\UserRepository.cs" />
