--- a/Web/TeleConsult.Web/Areas/Admin/Views/web.config
+++ b/Web/TeleConsult.Web/Areas/Admin/Views/web.config
@@ -18,7 +18,7 @@
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.Optimization" />
         <add namespace="TeleConsult.Web" />
-        
+        <add namespace="TeleConsult.Web.Infrastructure.Bundles" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
